k8s/service-ui-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-diagnostic-ui
  namespace: k8s-diagnostic
  labels:
    app: k8s-diagnostic-ui
spec:
  type: NodePort
  selector:
    app: k8s-diagnostic-ui
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32030
